<resources>
    <string name="app_name">IQuest</string>
    <string name="title_activity_main">IQuest</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="app_intro">AppIntro</string>

    <string name="detail_ds">Цены: с Понедельника по Четверг = 300 гривен, с Пятницы по Субботу = 400 грн.\n\nСложность 3 из 5.\n\nКоманда: 2-5 человек.\n\nМаленькая девочка, по имени Алина, очень сильно боялась оставаться одна у себя в комнате, родителям она постоянно жаловалась, что там кто¬то или что¬то есть, но они всего лишь смеялись и говорили что это ее бурная детская фантазия! Но вот, в один из дней Алина вечером пошла спать в свою комнату и пропала бесследно навсегда... Родители потратили все силы чтобы найти и вернуть свою дочь, но все было безрезультатно. От большого горя они больше не смогли жить в своем доме и уехали. Эта история передается из уст в уста и каждый год смельчаки приходят в комнату маленькой Алины, чтобы разгадать загадку ее исчезновения, при этом сделать все возможное, чтобы не кануть в неизвестность самим...</string>
    <string name="detail_cd">Цены: с Понедельника по Четверг = 300 гривен, с Пятницы по Субботу = 400 грн.\n\nСложность 3 из 5.\n\nКоманда: 2-5 человек.\n\nДействие происходит в городе Сиэтл, штат Вашингтон, США. На
протяжении года было найдено 5 трупов в радиусе 10 км. Все пять дел закрыли, констатирован факт самоубийств каждой жертвы. Все дела были переданы детективу Джиму Майерсу на пересмотр по его собственной инициативе. Детектив на протяжении полгода рассматривал тщательно каждое дело, исследовал материалы, искал взаимосвязи. Но спустя неделю после того, как он передал результаты своего расследования в ЦРУ, он исчез и не выходит на связь... Что же случилось с детективом? Связано ли его исчезновение с этими пятью жертвами?</string>
    <string name="detail_bc">Цены: с Понедельника по Четверг = 150 гривен, с Пятницы по Субботу = 200 грн.\n\nСложность 4 из 5.\n\nКоманда: 2 человека.\n\nКандалы неприятно давили ноги и руки, было тяжело дышать с мешком на голове. В подвале стояла гробовая тишина, лишь где-то приглушенно капала вода. Мы поняли, что надо действовать: мы сорвали мешки и увидели небольшую камеру, залитую тусклым светом, голоса снаружи сообща договорились отвести нас на плаху через 60 минут. "Нужно сделать все, чтобы вырваться отсюда, иначе можно распрощаться с жизнью навсегда..."</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_item_share">Рассказать о приложении</string>
    <string name="menu_item_exit">Выход</string>
    <string name="menu_item_edit">Редактировать данные</string>
    <string name="menu_item_about">Контакты</string>
    <string name="menu_item_home">Домой</string>
    <string name="rules">Требования и правила для участников IQuest\n\nКаждый участник, находясь на территории IQuest, как в гостевой, так и в игровой зоне, обязан соблюдать нижеизложенные требования.\n\n
Пренебрежение требованиями может повлечь за собой травматизм различной степени тяжести, а также незапланированное нарушение сюжета игры или ее остановку.\n\n
При несоблюдение любого пункта требований и правил, администратор имеет право остановить игру и запретить группе участников дальнейшее нахождение на территории квеста. Уплаченная стоимость при этом не возвращается.\n\n
1. Время игры 60 минут. Если команда не успела пройти квест за 60 минут, администратор останавливает игру.\n
2. В квесте может принять участие команда от 1 до 4 человек ( в некоторых квестах возможны исключения).\n
3. Основная задача — выбраться из помещения, в котором вы оказались. Для этого нужно решать головоломки, находить ключи, открывать двери и замки итд. Для прохождения квеста необходимо только ваше мышление, наблюдательность и внимание. Специальных знаний и навыков не требуется.\n
4. Ни одна из головоломок не решается с помощью силы. Мы просим вас НЕ выламывать двери, НЕ взламывать замки, НЕ разбирать и НЕ разбивать на части предметы интерьера, мебель. В случае поломки по вине участников, участники должны возместить материальный ущерб компании IQuest.\n
5. Запрещается забирать с собой ( красть) или умышленно портить любой реквизит и оборудование, находящееся на территории IQuest.\n
6. При вводе неправильного кода в электронный сейф три раза подряд — сейф автоматически блокируется на 3-5 минут.\n
7. Во всех помещениях установлена система видеонаблюдения. В любой момент по вашему требованию игра может быть остановлена, двери открыты, а участники выпущены. После этого квест возобновить повторно нельзя. В некоторых квестах допускаются подсказки с помощью средств связи с администратором квеста, которые вы можете взять в любой момент игры.\n
8. ЗАПРЕЩАЕТСЯ прикасаться к линиям электропроводки, выкручивать винты, выкручивать лампы, разбирать потолок.\n
НЕДОПУСТИМО: засовывать пальцы или металлические предметы в розетки, ломать или разбирать мебель, использовать предметы, помеченные специальным символом. Все предметы, помеченные таким символом — не участвуют в квесте!\n
9. При наличии хронических заболеваний или аллергии у участников квеста, участники обязаны сообщить о них администратору квеста, он уменьшит или совсем уберет спецэффекты в любой момент до начала игры или в течение игры.\n
\n\nРуководство игры не несет никакой ответственности за причинение вреда здорововью участника любой степени тяжести, возникшее по причине невыполнения участником настоящих требований.</string>
</resources>
